using DependencyInjection.Models;

namespace DependencyInjection.Implementation;

public class PgRepository : IRepository
{
    public Auto CreateAuto(Auto auto)
    {
        throw new NotImplementedException();
    }

    public Auto GetAuto(string serialNumber)
    {
        throw new NotImplementedException();
    }

    public Auto UpdateAuto(string serialNumber, Auto auto)
    {
        throw new NotImplementedException();
    }

    public Auto DeleteAuto(string serialNumber)
    {
        throw new NotImplementedException();
    }
}