namespace DependencyInversion.Services.DTO;

public class AutoDto
{
    public string SerialNumber { get; set; }
    public string Name { get; set; }
    public string Model { get; set; }
    public DateTime ReleaseDate { get; set; }
}